<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppMarket</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="backicon">backicon</string>
    <string name="back">Back</string>
    <string name="runningtask">正在执行的下载任务</string>
    <string name="app_def_icon">appicon</string>
    <string name="item_appname">appname</string>
    <string name="sys_cancel">取消</string>
    <string name="sys_confirm">确定</string>
    <string name="sys_download">下载</string>
    <string name="sys_install">安装</string>
    <string name="home_tabs_layout_topics">管理</string>
    <string name="sys_complete">完成</string>
    <string name="btn_register_onkey">注册</string>
    <string name="category_app_tab_title">最新</string>
    <string name="btn_login">登录</string>
    <string name="category_game_tab_title">分类</string>
    <string name="home_tabs_layout_tips">推荐</string>
    <string name="user_info_activity_broswer">直接浏览</string>
    <string name="sys_download_mgr">ContentBack</string>
    <string name="dl_current_status">下载中: %1$d</string>
    <string name="kugou">酷狗音乐</string>
    <string name="rediret_tasklist">跳转至任务列表</string>
    <string name="personnal_user_login_account_hint">输入账号(用户名/邮箱/手机号)</string>
    <string name="search_app_hint">搜您想要的应用</string>
    <string name="personnal_user_login_pwd_pre">密 码：</string>
    <string name="personnal_user_login_pwd_hint">输入密码(6-20个字符)</string>
    <string name="click_ref">刷新试试</string>
    <string name="personnal_user_login_verification_code">验证码：</string>
    <string name="RetryMessge">加载失败，请稍后刷新~</string>
    <string name="personnal_user_login_verification_hint">点击图片换一换</string>
    <string name="preload_app_fragment_lview_empty_content">真棒！您的应用都是最新版本</string>
    <string name="app_manage">管理</string>
    <string name="app_manager">应用管理</string>
    <string name="error_share_tips">"抽空试试 “零流量分享” 吧,
给好友发文件不用流量哦~ "</string>
    <string name="personnal_user_login_title">个人中心</string>
    <string name="Downloading">努力加载中...</string>
    <string name="personnal_user_login_remind_pwd">记住密码</string>
    <string name="personnal_user_login_auto_login">自动登录</string>
    <string name="personnal_user_login_forget_pwd">忘记密码</string>
    <string name="smaller_download_download">下载</string>
    <string name="app_details_tv_introduct">[应用介绍]</string>
    <string name="app_details_tv_introduct_content_hint">暂无应用介绍</string>
    <string name="app_details_rating">%1$d人评分</string>
    <string name="app_details_permission">权限详情</string>
    <string name="app_details_category">分类:</string>
    <string name="app_details_category_hint">资讯与阅读</string>
    <string name="app_details_verion">版本:</string>
    <string name="app_details_verion_hint">2.2.154</string>
    <string name="app_details_downloads">下载:</string>
    <string name="app_details_downloads_hint">%1$d次</string>
    <string name="app_details_entitysize">大小:</string>
    <string name="app_details_entitysize_hint">25M</string>
    <string name="app_details_updatetime">更新时间:</string>
    <string name="app_details_updatetime_hint">2014/2/20</string>
    <string name="app_details_sysminverion">系统版本:</string>
    <string name="app_details_sysminverion_hint">Android%1$s以上</string>
    <string name="app_details_devloper">开发者:</string>
    <string name="app_details_devloper_hint">常耀耀</string>
    <string name="app_details_download_filesize">下载(%1$d)</string>
    <string name="app_details_tv_permission_hint">发送持久广播</string>
    <string name="app_details_tv_permission_content_hint">允许应用程序发送持续性广播,这些广播关闭后仍会保留.恶意应用程序可能会借此消耗手机内存,从而降低其运行速度或稳定性</string>
    <string name="app_details_permission_ref_hint">应用权限</string>
    <string name="app_user_account_hint">工号:%1$s</string>
    <string name="app_user_account_name_hint">姓名:%1$s</string>
    <string name="app_user_account_notes_hint">notes:%1$s</string>
    <string name="app_user_account_tel_hint">分机:%1$s</string>
    <string name="app_mgr_info_hint">可升级应用</string>
    <string name="app_mgr_installed_info_hint">已安装应用</string>
    <string name="sys_app_downloading">下载中</string>
    <string name="all_rights_reserved">Copyright © 2014 GDS Inc.All rights reserved.</string>
    <string name="versionnum">1.0</string>
    <string name="setting_about_description">弹指间,无心间</string>
    <string name="app_version">V1.0.1</string>
    <string name="app_information">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\
                 本应用是GDS应用的一款轻量级下载软件，如果想了解更多,\
        欢迎访问我们的主页: http://app.foxconn.com/appmarket \
        由于时间仓促，错误与疏忽之处在所难免,\希望各位朋友批评指正,再次表示感谢!</string>
    <string name="main_title">AppMarket</string>
    <string name="main_list_app_icon_desc">App Icon </string>
    <string name="main_list_app_name">App Name</string>
    <string name="main_list_app_time">1900年12月31日</string>
    <string name="main_content_list_updatetime">更新日期:</string>
    <string name="main_content_list_downloadrank">下載量：</string>
    <string name="main_content_list_appdesc">App描述信息bala bala bala bala bala balabalabalabalabalabalabalabalabalabala</string>
    <string name="app_list_version">version 1.0</string>
    <string name="networkfaile">无网络连接</string>
    <string name="dialogtitle">温馨提示</string>
    <string name="ok">确定</string>
    <string name="app_download_defnum">0</string>

    <!-- Strings used by the sample DeviceAdminReceiver -->
    <string name="admin_receiver_status">AppMarket Device Admin: %1$s</string>
    <string name="admin_receiver_status_enabled">enabled</string>
    <string name="admin_receiver_status_disabled">disabled</string>
    <string name="admin_receiver_status_pw_changed">pw changed</string>
    <string name="admin_receiver_status_pw_failed">pw failed</string>
    <string name="admin_receiver_status_pw_succeeded">pw succeeded</string>
    <string name="admin_receiver_status_disable_warning">        This is an optional message to warn the user about disabling.</string>
    <string name="sample_device_admin">AppMarket Device Admin</string>
    <string name="sample_device_admin_description">appmarket code for writing
        a DeviceAdmin class.  This implementation provides a UI (in ApiDemos)
        for you to directly control what the DeviceAdmin does with the
        system.</string>
    <string name="add_admin_extra_app_text">        Additional text explaining why this needs to be added.</string>
    <string name="expiration_status_past">Password expired %1$s ago</string>
    <string name="expiration_status_future">Password will expire %1$s from now</string>
    <string name="sys_check_network_settings">当前的网络不可用,请检查网络设置.</string>
    <string name="sys_item_loading_hint">正在努力加載中...</string>
    <string name="sys_about">关于</string>
    <string name="sys_check_update">检查更新</string>
    <string name="sys_refresh">刷新</string>
    <string name="sys_user_center">个人中心</string>
    <string name="app_search">应用搜索</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>
    <string name="app_details_download_current_percent_hint">已下载0%</string>
    <string name="sys_common_launch_hint">启动</string>
    <string name="sys_common_dev_team">智能移动整合处</string>
    <string name="sys_common_dev_tel_hint">579+25640</string>
    <string name="sys_common_dev_tel_text">电话:</string>
    <string name="sys_common_dev_author_text">作者:</string>
    <string name="sys_about_us">关于</string>
    <string name="sys_common_app_update">应用更新</string>
    <string name="sys_common_app_mgr">应用管理</string>
    <string name="sys_pause">暂停</string>
    <string name="sys_common_download_success">应用已下载完毕,点击安装</string>
    <string name="sys_common_download_install">安装</string>
    <string name="sys_common_nextstep">下一步</string>
    <string name="app_user_reg2_tel_hint">请输入分机号如:(579+256**)</string>
    <string name="sys_common_reg">注册</string>
    <string name="app_user_reg_result_success_hint">恭喜你,注册成功!</string>
    <string name="sys_content_phone_edittext_hint">请输入手机号如:(13838338388)</string>
    <string name="sys_common_email_edittext_hint">请输入注册邮箱如:(samuelwang95@gmail.com)</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请选择邮件的方式将此错误报告提交给我，我会尽快修复这个问题，谢谢！</string>
    <string name="submit_report">提交报告</string>
    <string name="app_is_run_background">AppMarket应用正在后台运行</string>
       <string name="copyright_2014_gds_inc_all_rights_reserved">Copyright © 2014  GDS Inc.All rights reserved.</string>
    <string name="sys_version_name">1.0.1</string>
      <!-- 下拉刷新，上拉加载更多 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="sys_back_title_text_hint">返回</string>
</resources>