<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/list_item_height"
    android:background="@drawable/sys_item_base"

    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/dlmgr_iv"
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/app_def_icon"
       android:layout_margin="15dp"
        android:src="@drawable/app_icon_tbd" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/appname_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/item_appname"
            android:text="@string/kugou"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ProgressBar
                android:id="@+id/currentvalues_pb"
                style="@style/sys_progressbar_Horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="18dp" />

            <Button
                android:id="@+id/dlmgr_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="50dp"
                android:background="@drawable/button_white"
                android:padding="5dp"
                android:hint="@string/sys_cancel"
                android:textSize="15sp" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>