<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_content_bg"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/sys_back_title" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:paddingLeft="15dp"
        android:paddingRight="12dp" >


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/status_title"
            android:text="个人信息"
            android:textColor="@color/base_font_yellow"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/app_user_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/app_user_account_hint"
            android:textColor="@color/webapp_black"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/app_user_account_tv_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/app_user_account_name_hint"
            android:textColor="@color/webapp_black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/app_user_account_tv_notes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/app_user_account_notes_hint"
            android:textColor="@color/webapp_black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/app_user_account_tv_tel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/app_user_account_tel_hint"
            android:textColor="@color/webapp_black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/app_user_account_btn_del"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/photo_delete_btn_selector"
            android:padding="10dp"
            android:text="退出当前用户" />
    </LinearLayout>

</LinearLayout>